--- a/po/sr_RS@latin/common-components.po
+++ b/po/sr_RS@latin/common-components.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-31 11:43+0000\n"
+"PO-Revision-Date: 2016-11-22 13:45+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -470,7 +470,7 @@ msgstr ""
 #: CRM/Campaign/Form/Survey/Results.php
 #: CRM/Report/Form/Campaign/SurveyDetails.php
 msgid "Survey Responses"
-msgstr ""
+msgstr "Anketa - odgovori"
 
 #: CRM/Campaign/Form/Survey/Results.php
 #: templates/CRM/Campaign/Form/Survey/Results.tpl CRM/Report/Form.php
