--- a/po/pt_BR/common-base.po
+++ b/po/pt_BR/common-base.po
@@ -32,8 +32,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-17 21:46+0000\n"
-"Last-Translator: Edson Duarte <edson@artsoft.com.br>\n"
+"PO-Revision-Date: 2016-11-22 05:54+0000\n"
+"Last-Translator: Diego Viegas <diego.viegas@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -8185,7 +8185,7 @@ msgstr "Últimos 3 meses"
 
 #: CRM/Core/Form/Date.php
 msgid "Last 30 days"
-msgstr ""
+msgstr "Últimos 30 dias"
 
 #: CRM/Core/Form/Date.php
 msgid "Last 7 days"
@@ -8193,7 +8193,7 @@ msgstr "Últimos 7 dias"
 
 #: CRM/Core/Form/Date.php
 msgid "Yesterday"
-msgstr ""
+msgstr "Ontem"
 
 #: CRM/Core/Form/Date.php
 msgid "This Year"
@@ -8217,59 +8217,59 @@ msgstr "Esta Semana"
 
 #: CRM/Core/Form/Date.php
 msgid "Today"
-msgstr ""
+msgstr "Hoje"
 
 #: CRM/Core/Form/Date.php
 msgid "Tomorrow"
-msgstr ""
+msgstr "Amanhã"
 
 #: CRM/Core/Form/Date.php
 msgid "Upcoming 7 days"
-msgstr ""
+msgstr "Próximos 7 dias"
 
 #: CRM/Core/Form/Date.php
 msgid "Upcoming Month"
-msgstr ""
+msgstr "Próximo Mês"
 
 #: CRM/Core/Form/Date.php
 msgid "Upcoming 12 Months"
-msgstr ""
+msgstr "Próximos 12 Meses"
 
 #: CRM/Core/Form/Date.php
 msgid "To End of Current Year"
-msgstr ""
+msgstr "Até o Final Deste Ano"
 
 #: CRM/Core/Form/Date.php
 msgid "To End of Current Quarter"
-msgstr ""
+msgstr "Até o Final Deste Trimestre"
 
 #: CRM/Core/Form/Date.php
 msgid "To End of Current Month"
-msgstr ""
+msgstr "Até o Final Deste Mês"
 
 #: CRM/Core/Form/Date.php
 msgid "To End of Current Week"
-msgstr ""
+msgstr "Até o Final Desta Semana"
 
 #: CRM/Core/Form/Date.php
 msgid "Next Week"
-msgstr ""
+msgstr "Próxima Semana"
 
 #: CRM/Core/Form/Date.php
 msgid "Next Month"
-msgstr ""
+msgstr "Próximo Mês"
 
 #: CRM/Core/Form/Date.php
 msgid "Next Quarter"
-msgstr ""
+msgstr "Próximo Trimestre"
 
 #: CRM/Core/Form/Date.php
 msgid "Next Fiscal Year"
-msgstr ""
+msgstr "Próximo Ano Fiscal"
 
 #: CRM/Core/Form/Date.php
 msgid "Next Year"
-msgstr ""
+msgstr "Próximo Ano"
 
 #: CRM/Core/Form/Date.php
 msgid "Relative Date Range"
@@ -8277,28 +8277,28 @@ msgstr "Período Relativo"
 
 #: CRM/Core/Form/RecurringEntity.php
 msgid "Repeats every"
-msgstr ""
+msgstr "Repete todo"
 
 #: CRM/Core/Form/RecurringEntity.php
 msgid "Repetition Start Date"
-msgstr ""
+msgstr "Data de Início da Repetição"
 
 #: CRM/Core/Form/RecurringEntity.php
 #: templates/CRM/Core/Form/RecurringEntity.hlp
 msgid "Repeats on"
-msgstr ""
+msgstr "Repete em"
 
 #: CRM/Core/Form/RecurringEntity.php
 msgid "day of the month"
-msgstr ""
+msgstr "dia do mês"
 
 #: CRM/Core/Form/RecurringEntity.php
 msgid "day of the week"
-msgstr ""
+msgstr "dia da semana"
 
 #: CRM/Core/Form/RecurringEntity.php
 msgid "Repeats by"
-msgstr ""
+msgstr "Repete por"
 
 #: CRM/Core/Form/RecurringEntity.php
 #: templates/CRM/Activity/Selector/Selector.tpl
@@ -8309,15 +8309,15 @@ msgstr "Primeiro"
 
 #: CRM/Core/Form/RecurringEntity.php
 msgid "Second"
-msgstr ""
+msgstr "Segundo"
 
 #: CRM/Core/Form/RecurringEntity.php
 msgid "Third"
-msgstr ""
+msgstr "Terceiro"
 
 #: CRM/Core/Form/RecurringEntity.php
 msgid "Fourth"
-msgstr ""
+msgstr "Quarto"
 
 #: CRM/Core/Form/RecurringEntity.php
 #: templates/CRM/Activity/Selector/Selector.tpl
@@ -8328,24 +8328,24 @@ msgstr "Último"
 
 #: CRM/Core/Form/RecurringEntity.php
 msgid "After"
-msgstr ""
+msgstr "Depois"
 
 #: CRM/Core/Form/RecurringEntity.php
 msgid "On"
-msgstr ""
+msgstr "Em"
 
 #: CRM/Core/Form/RecurringEntity.php
 #: templates/CRM/Core/Form/RecurringEntity.hlp
 msgid "Ends"
-msgstr ""
+msgstr "Termina"
 
 #: CRM/Core/Form/RecurringEntity.php
 msgid "Exclude Dates"
-msgstr ""
+msgstr "Excluir Datas"
 
 #: CRM/Core/Form/RecurringEntity.php
 msgid "This is a required field"
-msgstr ""
+msgstr "Este é um campo obrigatório"
 
 #: CRM/Core/Form/RecurringEntity.php
 msgid "Occurrences should be less than or equal to 30"
@@ -8357,23 +8357,23 @@ msgstr ""
 
 #: CRM/Core/Form/RecurringEntity.php
 msgid "Invalid day of the month"
-msgstr ""
+msgstr "Dia do mês inválido"
 
 #: CRM/Core/Form/RecurringEntity.php
 msgid "Invalid option"
-msgstr ""
+msgstr "Opção inválida"
 
 #: CRM/Core/Form/RecurringEntity.php
 msgid "Invalid day name"
-msgstr ""
+msgstr "Dia do mês inválido"
 
 #: CRM/Core/Form/RecurringEntity.php
 msgid "Repeat Configuration has been saved"
-msgstr ""
+msgstr "A Configuração de Repetição foi salva"
 
 #: CRM/Core/Form/RecurringEntity.php
 msgid "Repeat Entity"
-msgstr ""
+msgstr "Repetir Entidade"
 
 #: CRM/Core/Form/Renderer.php
 msgid "Edit Options"
@@ -8550,7 +8550,7 @@ msgstr "A chave não está definida para este processador de pagamento"
 
 #: CRM/Core/Payment/AuthorizeNetIPN.php
 msgid "Subscription payment failed - %1"
-msgstr ""
+msgstr "Pagamento da Inscrição falhou - %1"
 
 #: CRM/Core/Payment/AuthorizeNetIPN.php
 msgid ""
@@ -8956,7 +8956,7 @@ msgstr "adicionar contatos"
 
 #: CRM/Core/Permission.php
 msgid "Create a new contact record in CiviCRM"
-msgstr ""
+msgstr "Criar novo registro de contato no CiviCRM"
 
 #: CRM/Core/Permission.php
 msgid "view all contacts"
@@ -8996,7 +8996,7 @@ msgstr "acessar contatos excluídos"
 
 #: CRM/Core/Permission.php
 msgid "Access contacts in the trash"
-msgstr ""
+msgstr "Acessar contatos na lixeira"
 
 #: CRM/Core/Permission.php
 msgid "import contacts"
@@ -9004,7 +9004,7 @@ msgstr "importar contatos"
 
 #: CRM/Core/Permission.php
 msgid "Import contacts and activities"
-msgstr ""
+msgstr "Importar contatos e atividades"
 
 #: CRM/Core/Permission.php
 msgid "edit groups"
@@ -9062,7 +9062,7 @@ msgstr "criar perfil"
 
 #: CRM/Core/Permission.php
 msgid "Use profiles in Create mode"
-msgstr ""
+msgstr "Usar perfis em Modo de Criação"
 
 #: CRM/Core/Permission.php
 msgid "profile edit"
@@ -9070,7 +9070,7 @@ msgstr "editar perfil"
 
 #: CRM/Core/Permission.php
 msgid "Use profiles in Edit mode"
-msgstr ""
+msgstr "Usar perfis em Modo de Edição"
 
 #: CRM/Core/Permission.php
 msgid "profile view"
@@ -9094,7 +9094,7 @@ msgstr ""
 
 #: CRM/Core/Permission.php
 msgid "Delete activities"
-msgstr ""
+msgstr "Excluir atividades"
 
 #: CRM/Core/Permission.php
 msgid "access CiviCRM"
@@ -9102,7 +9102,7 @@ msgstr "acessar CiviCRM"
 
 #: CRM/Core/Permission.php
 msgid "Master control for access to the main CiviCRM backend and API"
-msgstr ""
+msgstr "Controle principal para acesso ao backend central do CiviCRM e API"
 
 #: CRM/Core/Permission.php
 msgid "access Contact Dashboard"
@@ -9110,7 +9110,7 @@ msgstr "acessar o Dashboard de Contatos"
 
 #: CRM/Core/Permission.php
 msgid "View Contact Dashboard (for themselves and visible contacts)"
-msgstr ""
+msgstr "Ver Painel de Contato (para eles mesmos e contatos visíveis)"
 
 #: CRM/Core/Permission.php
 msgid "translate CiviCRM"
@@ -9118,7 +9118,7 @@ msgstr "traduzir CiviCRM"
 
 #: CRM/Core/Permission.php
 msgid "Allow User to enable multilingual"
-msgstr ""
+msgstr "Permitir Usuário a habilitar multilíngua"
 
 #: CRM/Core/Permission.php
 msgid "administer reserved groups"
@@ -9126,7 +9126,7 @@ msgstr "administrar grupos reservados"
 
 #: CRM/Core/Permission.php
 msgid "Edit and disable Reserved Groups (Needs Edit Groups)"
-msgstr ""
+msgstr "Editar e desabilitar Grupos Reservados (Necessita Editar Grupos)"
 
 #: CRM/Core/Permission.php
 msgid "administer Tagsets"
@@ -9158,7 +9158,7 @@ msgstr "visualização saída da depuração"
 
 #: CRM/Core/Permission.php
 msgid "View results of debug and backtrace"
-msgstr ""
+msgstr "Ver resultados de debug e rastreamento"
 
 #: CRM/Core/Permission.php
 msgid "view all notes"
@@ -9166,7 +9166,7 @@ msgstr "ver todas as notas"
 
 #: CRM/Core/Permission.php
 msgid "View notes (for visible contacts) even if they're marked admin only"
-msgstr ""
+msgstr "Ver notas (para contatos visíveis) mesmo se estiverem marcados como apenas admin"
 
 #: CRM/Core/Permission.php
 msgid "access AJAX API"
