--- a/po/sr_RS@latin/campaign.po
+++ b/po/sr_RS@latin/campaign.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-02 15:30+0000\n"
+"PO-Revision-Date: 2016-11-22 13:50+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -35,11 +35,11 @@ msgstr ""
 
 #: CRM/Campaign/BAO/Query.php
 msgid "Survey - %1"
-msgstr ""
+msgstr "Anketa - %1"
 
 #: CRM/Campaign/BAO/Query.php
 msgid "Survey Status - %1"
-msgstr ""
+msgstr "Anketa - Status - %1"
 
 #: CRM/Campaign/BAO/Query.php
 msgid "Survey Interviewer - %1"
@@ -73,7 +73,7 @@ msgstr ""
 
 #: CRM/Campaign/BAO/Survey.php
 msgid "View Survey Report"
-msgstr ""
+msgstr "Vidi izveštaj ankete"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign Description"
@@ -125,7 +125,7 @@ msgstr ""
 
 #: CRM/Campaign/DAO/Survey.php templates/CRM/Campaign/Form/Search/Survey.tpl
 msgid "Survey ID"
-msgstr ""
+msgstr "ID ankete"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Campaign ID"
@@ -153,7 +153,7 @@ msgstr ""
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Is Active"
-msgstr ""
+msgstr "Anketa je aktivna"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Is Default Survey"
@@ -161,11 +161,11 @@ msgstr ""
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Created By"
-msgstr ""
+msgstr "Anktu kreirao"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Modified"
-msgstr ""
+msgstr "Anketa modifikovana"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Modified On"
@@ -203,7 +203,7 @@ msgstr ""
 #: CRM/Campaign/Form/Task/Interview.php CRM/Campaign/Form/Task/Release.php
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Survey(s)"
-msgstr ""
+msgstr "Anketa(e)"
 
 #: CRM/Campaign/Form/Gotv.php
 msgid "GOTV (Voter Tracking)"
@@ -225,12 +225,12 @@ msgstr ""
 
 #: CRM/Campaign/Form/Petition.php
 msgid "Edit Survey"
-msgstr ""
+msgstr "Uredi anketu"
 
 #: CRM/Campaign/Form/Petition.php CRM/Campaign/Form/Survey/Delete.php
 #: CRM/Campaign/Page/DashBoard.php CRM/Campaign/Page/Survey.php
 msgid "Delete Survey"
-msgstr ""
+msgstr "Obriši anketu"
 
 #: CRM/Campaign/Form/Petition.php
 msgid "Edit Petition"
@@ -298,7 +298,7 @@ msgstr ""
 
 #: CRM/Campaign/Form/Search/Survey.php
 msgid "Find Survey"
-msgstr ""
+msgstr "Nađi anketu"
 
 #: CRM/Campaign/Form/Search.php
 msgid "Find Respondents To %1"
@@ -314,7 +314,7 @@ msgstr ""
 
 #: CRM/Campaign/Form/Survey/Delete.php
 msgid "'%1' survey has been deleted."
-msgstr ""
+msgstr "'%1' anketa je obrisana"
 
 #: CRM/Campaign/Form/Survey/Delete.php
 msgid "Delete action is missing expected survey ID."
@@ -322,11 +322,11 @@ msgstr ""
 
 #: CRM/Campaign/Form/Survey/Main.php
 msgid "Configure Survey"
-msgstr ""
+msgstr "Konfiguracija ankete"
 
 #: CRM/Campaign/Form/Survey/Main.php
 msgid "Survey Dashboard"
-msgstr ""
+msgstr "Kontrolna tabla ankete"
 
 #: CRM/Campaign/Form/Survey/Main.php
 msgid "Instructions for interviewers"
@@ -410,7 +410,7 @@ msgstr ""
 
 #: CRM/Campaign/Form/Survey.php
 msgid "Configure Survey - %1"
-msgstr ""
+msgstr "Konfiguracija ankete - %1"
 
 #: CRM/Campaign/Form/Survey.php
 msgid "'%1' have been saved."
@@ -418,11 +418,11 @@ msgstr ""
 
 #: CRM/Campaign/Form/SurveyType.php
 msgid "Selected Survey type has been deleted."
-msgstr ""
+msgstr "Odabrani tip ankete je obrisan."
 
 #: CRM/Campaign/Form/SurveyType.php
 msgid "The Survey type '%1' has been saved."
-msgstr ""
+msgstr "Tip ankete '%1' je sačuvan."
 
 #: CRM/Campaign/Form/Task/Interview.php
 msgid "Could not find Interviewer."
@@ -492,7 +492,7 @@ msgstr[2] ""
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Could not find Survey Id."
-msgstr ""
+msgstr "ID ankete nije pronađen."
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Could not find contacts for reservation."
@@ -629,15 +629,15 @@ msgstr ""
 
 #: CRM/Campaign/Page/DashBoard.php CRM/Campaign/Page/Survey.php
 msgid "Update Survey"
-msgstr ""
+msgstr "Ažuriraj anketu"
 
 #: CRM/Campaign/Page/DashBoard.php CRM/Campaign/Page/Survey.php
 msgid "Disable Survey"
-msgstr ""
+msgstr "Isključi anketu"
 
 #: CRM/Campaign/Page/DashBoard.php CRM/Campaign/Page/Survey.php
 msgid "Enable Survey"
-msgstr ""
+msgstr "Uključi anketu"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Update Petition"
@@ -674,7 +674,7 @@ msgstr ""
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Search Survey"
-msgstr ""
+msgstr "Pretraži anketu"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "1 Day"
@@ -697,7 +697,7 @@ msgstr ""
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Surveys"
-msgstr ""
+msgstr "Ankete"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Petitions"
@@ -774,7 +774,7 @@ msgstr ""
 msgid ""
 "Use this form to Add new Survey. You can create a new Activity type, "
 "specific to this Survey or select an existing activity type for this Survey."
-msgstr ""
+msgstr "Iskoristite ovaj formular da dodate novu anketu. Možete dodati nov tip aktivnosti vezan za ovu anketu ili odabrati postojeći tip aktivnosti."
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "Fields about the contact you want to collect."
@@ -814,7 +814,7 @@ msgstr ""
 msgid ""
 "You can create new result options for this survey, or select an existing "
 "survey result set which you've already created for another survey."
-msgstr ""
+msgstr "Možete dodati novu opciju za rezultate ove ankete, ili odabrati postojeći set rezultata koji ste već kreirali za drugu anketu. "
 
 #: templates/CRM/Campaign/Form/ResultOptions.tpl
 msgid "Result Options"
@@ -868,17 +868,17 @@ msgstr ""
 #: templates/CRM/Campaign/Page/Petition.tpl
 #: templates/CRM/Campaign/Page/Survey.tpl
 msgid "Add Survey"
-msgstr ""
+msgstr "Dodaj anketu"
 
 #: templates/CRM/Campaign/Form/Search/Survey.tpl
 msgid "Survey Type ID"
-msgstr ""
+msgstr "ID tipa ankete"
 
 #: templates/CRM/Campaign/Form/Search/Survey.tpl
 #: templates/CRM/Campaign/Page/Petition.tpl
 #: templates/CRM/Campaign/Page/Survey.tpl
 msgid "Survey Type"
-msgstr ""
+msgstr "Tip ankete"
 
 #: templates/CRM/Campaign/Form/Search/Survey.tpl
 msgid "Reserve Each Time"
@@ -890,7 +890,7 @@ msgstr ""
 
 #: templates/CRM/Campaign/Form/Search/Survey.tpl
 msgid "Search Surveys"
-msgstr ""
+msgstr "Pretraži ankete"
 
 #: templates/CRM/Campaign/Form/Search/Survey.tpl
 msgid "Result Set for"
@@ -898,7 +898,7 @@ msgstr ""
 
 #: templates/CRM/Campaign/Form/Survey/Delete.tpl
 msgid "Are you sure you want to delete the %1 survey?"
-msgstr ""
+msgstr "Da li ste sigurni da želite da obišete anketu %1 ?"
 
 #: templates/CRM/Campaign/Form/Survey/Main.tpl
 msgid "Title of the survey."
@@ -941,7 +941,7 @@ msgstr ""
 
 #: templates/CRM/Campaign/Form/Survey/Main.tpl
 msgid "Is this survey active?"
-msgstr ""
+msgstr "Da li je ova anketa aktivna?"
 
 #: templates/CRM/Campaign/Form/Survey/Main.tpl
 msgid "Is this the default survey?"
@@ -964,7 +964,7 @@ msgstr ""
 
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 msgid "Survey Report"
-msgstr ""
+msgstr "Anketa - izveštaj"
 
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 msgid "Vote"
@@ -1114,7 +1114,7 @@ msgstr ""
 
 #: templates/CRM/Campaign/Page/SurveyType.tpl
 msgid "There are no survey type entered. You can <a href='%1'>add one</a>."
-msgstr ""
+msgstr "Nema unešenih tipova ankete. Možete ih <a href='%1'>dodati</a>."
 
 #: CRM/Campaign/DAO/CampaignGroup.php
 msgid "Campaign Group ID"
@@ -1126,4 +1126,4 @@ msgstr ""
 
 #: templates/CRM/Campaign/Page/SurveyType.tpl
 msgid "There are no survey types entered. You can <a href='%1'>add one</a>."
-msgstr ""
+msgstr "Nema unešenih tipova ankete. Možete ih <a href='%1'>dodati</a>."
