--- a/po/sr_RS@latin/common-base.po
+++ b/po/sr_RS@latin/common-base.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-31 17:35+0000\n"
+"PO-Revision-Date: 2016-11-22 13:50+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -619,7 +619,7 @@ msgstr "%1 %2 %3"
 
 #: CRM/Activity/BAO/Query.php xml/templates/civicrm_data.tpl
 msgid "Survey"
-msgstr ""
+msgstr "Anketa"
 
 #: CRM/Activity/BAO/Query.php
 msgid "Activity created by"
@@ -747,7 +747,7 @@ msgstr "Aktivnost je test?"
 
 #: CRM/Activity/BAO/Query.php
 msgid "Survey / Petition"
-msgstr ""
+msgstr "Anketa / Peticija"
 
 #: CRM/Activity/BAO/Query.php CRM/Contact/Form/DedupeRules.php
 #: CRM/Core/BAO/CustomField.php CRM/Core/BAO/File.php CRM/Core/Form.php
@@ -758,7 +758,7 @@ msgstr ""
 
 #: CRM/Activity/BAO/Query.php
 msgid "Survey Result"
-msgstr ""
+msgstr "Anketa - Rezultat"
 
 #: CRM/Activity/DAO/Activity.php CRM/Activity/DAO/ActivityContact.php
 #: CRM/Core/SelectValues.php
@@ -21928,7 +21928,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Survey Report (Detail)"
-msgstr ""
+msgstr "Anketa - izveštaj (detaljni)"
 
 #: xml/templates/civicrm_data.tpl
 msgid ""
