--- a/po/sr_RS@latin/pcp.po
+++ b/po/sr_RS@latin/pcp.po
@@ -3,12 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Đorđe Kolaković <djordje@catalystbalkans.org>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:06+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-11-22 13:42+0000\n"
+"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -138,7 +139,7 @@ msgstr ""
 
 #: CRM/PCP/BAO/PCP.php
 msgid "%1 status has been updated to %2."
-msgstr ""
+msgstr "%1 status je ažuriran na %2."
 
 #: CRM/PCP/BAO/PCP.php
 msgid "A notification email has been sent to the supporter."
@@ -215,11 +216,11 @@ msgstr ""
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Welcome"
-msgstr ""
+msgstr "Dobrodošli"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Your Goal"
-msgstr ""
+msgstr "Vaš cilj"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Goal Amount should be a numeric value"
@@ -227,7 +228,7 @@ msgstr ""
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Join Us"
-msgstr ""
+msgstr "Pridružite se"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Sign up Button"
@@ -235,11 +236,11 @@ msgstr ""
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Donate Now"
-msgstr ""
+msgstr "Doniraj sada"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Donation Button"
-msgstr ""
+msgstr "Dugme za doniranje"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Progress Bar"
@@ -270,15 +271,15 @@ msgstr ""
 
 #: CRM/PCP/Form/Campaign.php
 msgid "and is ready to use."
-msgstr ""
+msgstr "spremno za korišćenje."
 
 #: CRM/PCP/Form/Campaign.php
 msgid "updated"
-msgstr ""
+msgstr "ažurirano"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "created"
-msgstr ""
+msgstr "kreirano"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "A notification email has been sent to the site administrator."
@@ -630,7 +631,7 @@ msgstr ""
 
 #: templates/CRM/PCP/Page/PCP.tpl
 msgid "Page Title"
-msgstr ""
+msgstr "Naslov stranice"
 
 #: templates/CRM/PCP/Page/PCP.tpl
 msgid "Contribution Page / Event"
@@ -638,7 +639,7 @@ msgstr ""
 
 #: templates/CRM/PCP/Page/PCP.tpl
 msgid "View page"
-msgstr ""
+msgstr "Pregled stranice"
 
 #: templates/CRM/PCP/Page/PCP.tpl
 msgid "There are no Personal Campaign Pages which match your search criteria."
@@ -728,7 +729,7 @@ msgstr ""
 #: xml/templates/message_templates/pcp_notify_html.tpl
 #: xml/templates/message_templates/pcp_notify_text.tpl
 msgid "View Page"
-msgstr ""
+msgstr "Pregled stranice"
 
 #: xml/templates/message_templates/pcp_notify_html.tpl
 #: xml/templates/message_templates/pcp_notify_text.tpl
@@ -792,7 +793,7 @@ msgstr ""
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_supporter_notify_html.tpl
 msgid "Go to your page"
-msgstr ""
+msgstr "Idite na vašu stranicu"
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
