--- a/po/sv_SE/common-base.po
+++ b/po/sv_SE/common-base.po
@@ -12,13 +12,14 @@
 # bumby <martin@gnutiken.se>, 2011
 # Mikael Andersson <mikael.andersson@charity.se>, 2011
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Thomas Nilsson <thomas.nilsson@responsive.se>, 2011-2016
+# Thomas Nilefalk <thomas.nilefalk@responsive.se>, 2016
+# Thomas Nilefalk <thomas.nilefalk@responsive.se>, 2011-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-11 15:25+0000\n"
-"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
+"PO-Revision-Date: 2016-11-22 08:28+0000\n"
+"Last-Translator: Thomas Nilefalk <thomas.nilefalk@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -26297,7 +26298,7 @@ msgstr ""
 
 #: templates/CRM/Contact/Form/Merge.tpl
 msgid "Show/hide rows with the same data on each contact record."
-msgstr ""
+msgstr "Visa/dölj rader med samma information för båda kontaktposterna."
 
 #: templates/CRM/Contact/Form/Merge.tpl
 msgid "overwrite"
