--- a/po/fr_FR/report.po
+++ b/po/fr_FR/report.po
@@ -8,6 +8,7 @@
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # F Boot <f2boot@gmail.com>, 2012
+# Jean jacques BRODZIAK <jj.brodziak@cpe31.com>, 2016
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
 # Paul Caranton <caranton.paul@gmail.com>, 2015
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
@@ -20,8 +21,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-04 21:48+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-12-15 14:35+0000\n"
+"Last-Translator: Jean jacques BRODZIAK <jj.brodziak@cpe31.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -278,7 +279,7 @@ msgstr "Liste des dates des activités de type"
 
 #: CRM/Report/Form/Case/Detail.php
 msgid "Total Number of Cases "
-msgstr "Nombre Total de Cas"
+msgstr "Nombre Total de Dossiers"
 
 #: CRM/Report/Form/Case/Detail.php
 msgid "Total Number of Countries "
@@ -2298,7 +2299,7 @@ msgstr ""
 
 #: CRM/Report/Form/Instance.php
 msgid "Add to My Reports?"
-msgstr ""
+msgstr "Ajouter à mes comptes rendus ?"
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "Bounce Date"
@@ -2412,7 +2413,7 @@ msgstr "Lien vers"
 msgid ""
 "If set to Yes, this report will appear in the My Reports section of the "
 "reports listing page and will only be visible by you."
-msgstr ""
+msgstr "Si validé, ce compte rendu sera affiché dans la section \"Mes rapports\" de la page d'affichage des rapports et ne sera visible que par vous."
 
 #: templates/CRM/Report/Form/Tabs/Instance.tpl
 msgid "rows"
@@ -2431,14 +2432,14 @@ msgstr ""
 
 #: templates/CRM/Report/Form/Tabs/Settings.hlp
 msgid "Add to My Reports"
-msgstr ""
+msgstr "Ajouter à mes comptes rendus"
 
 #: templates/CRM/Report/Form/Tabs/Settings.hlp
 msgid ""
 "Selecting Yes will set the report to be visible only to the user\n"
 "  that clicked this option and saved the report settings form. If this is\n"
 "  enabled, the permissions configuration for this report will be disabled."
-msgstr ""
+msgstr "Si vous sélectionnez Oui, le rapport ne sera visible que par l'utilisateur\nqui a cliqué sur cette option et enregistré le formulaire de paramètres de rapport. Si \nactivée, la configuration des autorisations de ce rapport sera désactivée."
 
 #: templates/CRM/Report/Page/InstanceList.tpl
 msgid ""
