--- a/po/sr_RS@latin/common-base.po
+++ b/po/sr_RS@latin/common-base.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-09 16:05+0000\n"
+"PO-Revision-Date: 2016-12-19 05:26+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -5661,7 +5661,7 @@ msgstr ""
 
 #: CRM/Core/BAO/ActionSchedule.php
 msgid "Event Template"
-msgstr ""
+msgstr "Šablon događaja"
 
 #: CRM/Core/BAO/ActionSchedule.php CRM/Core/BAO/Job.php
 #: CRM/Core/BAO/LabelFormat.php CRM/Core/BAO/PaperSize.php
